monitoring/egress-prometheus.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-prometheus
  namespace: monitoring
spec:
  selector: app == 'prometheus'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'alertmanager'
        ports:
          - 9093
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'argocd'
        selector: >-
          app.kubernetes.io/instance == 'argocd' &&
          app.kubernetes.io/component == 'application-controller'
        ports:
          - 8082
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'k8up'
        selector: app.kubernetes.io/instance == 'k8up'
        ports:
          - 8080
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'prometheus-pushgateway'
        ports:
          - 9091
