monitoring/egress-to-pushgateway.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: egress-to-pushgateway
spec:
  namespaceSelector: k8up == 'backup-enabled'
  selector: baasresource == 'true'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'monitoring'
        selector: app == 'prometheus-pushgateway'
        ports:
          - 9091
